# dynamic-layer-adaptive-fl-sim

./: .gitignore  README.md  pyproject.toml  run_experiments.sh  run_sim.py
.devcontainer/: Dockerfile  devcontainer.json
.trunk/: trunk.yaml
configs/: config.yaml  devices_10.yaml  devices_5.yaml  partition_3_2.yaml  partition_equal.yaml  threshold_01.yaml  threshold_05.yaml
docs/: design.md  experiment_results.md  sim_summary.csv
scripts/: analyze_results.py  plot_mnist_accuracy.py
src/dla_fl/: aggregator.py  end_to_end_mnist.py  model_partition.py  scheduler.py  simulation.py  utils.py
